Fixed cart and payments controller so receives array of hashes and takes you to stripe, display after payment successful isn't beautiful yet and need $ to * 100

--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -1,2 +1,12 @@
-You've successfully made a payment! <%= link_to "Go To Listings", listings_path
-%>
+You've successfully made a payment! 
+
+Items Purchased:
+
+<div>
+<%= @listings.each do |listing| %>
+  <%= listing.title %>
+<% end %>
+
+</div>
+
+<%= link_to "Go To Listings", listings_path %>
