--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,48 +1,58 @@
 <%= form_with model: listing, local: true do |f| %>
 
 <form>
-  <div>
+  <div class="form-group">
+    <div class="row">
+    <div class="col-md-4">
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, class: "form-control" %>
   </div>
 
+  <div class="col-md-4">
   <%= f.label :photo %> 
   <%= f.file_field :photo, accept: 'image/png,image/gif,image/jpeg,image/jpg' %>
+  </div>
+  </div>
 
-  <%# how do I set this to only take numbers?? %>
-  <div>
+  <div class="form-group">
+    <div class="row">
+    <div class="col-md-4">
       <%= f.label :price %>
-      <%= f.text_field :price %>
+      <%= f.text_field :price, class: "form-control" %>
       </div>
 
-      <div>
-      <p>Unit of Measure: <%= f.collection_select(:uom_id, Uom.all, :id, :unit) %></p>
-      </div>
+    <div class="col-md-4">
+      <%= f.label :qty %>
+      <%= f.text_field :qty, class: "form-control" %>
+    </div>
+  </div>
+</div>
+
+
+  <div class="form-group">
+    <p>Unit of Measure: <%= f.collection_select(:uom_id, Uom.all, :id, :unit) %></p>
   </div>
 
-  <div>
-  <%= f.label :qty %>
-  <%= f.text_field :qty %>
-  </div>
-
-  <div>
+  <div class="form-group">
   <%= f.label :categories %>
   <%= f.collection_select(:category_id, Category.all, :id, :name) %>
   </div>
 
-  <%# HOW DO I FILTER WHAT SHOWS UP BASED ON THE ABOVE %>
-  <div>
+  <div class="form-group">
   <%= f.label :subcategories %>
   <%= f.collection_select(:subcategory_id, Subcategory.all, :id, :name) %>
   </div>
 
-  <div>
+  <div class="form-group">
+    <div class="row">
+    <div class="col-md-8">
   <%= f.label :description %>
-  <%= f.text_area :description %>
+  <%= f.text_area :description, class: "form-control" %>
   </div>
-
+</div>
+</div>
 
   <%= f.submit %>
+<% end %>
 
-  <% end %>
 </form>
