Added profile avatar images and seeded to user user individually, updated meet grower page text

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,17 @@
 <h2>Meet the Grower</h2>
 
-<h3><%= @user.first_name %></h3>
-<p><%= @user.bio %></p>
 <%= image_tag @user.profile_photo if @user.profile_photo.attached? %>
+<h3><%= @user.first_name %></h3>
+<p><strong>Bio: </strong><%= @user.bio %></p>
+<p><strong>Suburb: </strong><%= @user.location.suburb %></p>
 <br>
 
-<strong>Produce Listings:</strong>
+<strong><%= @user.first_name %>'s Produce Listings:</strong>
 <ol>
 <% @user_listings.each do |listing| %>
   <li><%= link_to listing.title, listing_path(listing) %>
   <%= number_to_currency(listing.price) %></li>
 <% end %>
 </ol>
+
+<hr>
