--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -49,6 +49,7 @@
 
 <div>
 <h2>Location: </h2><br>
+<p><i>(Exact street address for pickup will be provided upon order confirmation)</i></p>
 <!-- <p class="text">Suburb:<%= @listing.user.location.full_address %><br>
 <p class="text">Co-ords: Long:<%= @listing.user.location.longitude %> | Lat: <%= @listing.user.location.latitude %><br> -->
 
