--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -16,14 +16,6 @@
   <div class="filter">
   <h6>Filter produce listings:</h6>
 
-  <p>View Produce by Suburb: 
-    <%= search_form_for @q do |f| %>
-      <%# <%= f.label :user_location_suburb_eq, "Filter by Suburb: " %> 
-      <%= f.select :user_location_suburb_eq, options_for_select(Location.search_select_options) %>
-      <%= f.submit %>
-    <% end %>
-  </p>
-
   <p>View Produce by Category: 
     <%= search_form_for @q do |f| %>
     <%= f.select :category_name_cont, options_for_select(Category.search_select_options) %>
@@ -38,6 +30,14 @@
       <% end %>
    </p>
 
+  <p>View Produce by Suburb: 
+    <%= search_form_for @q do |f| %>
+      <%# <%= f.label :user_location_suburb_eq, "Filter by Suburb: " %> 
+      <%= f.select :user_location_suburb_eq, options_for_select(Location.search_select_options) %>
+      <%= f.submit %>
+    <% end %>
+  </p>
+
   <p>View Produce by Grower: 
     <%= search_form_for @q do |f| %>
       <%= f.select :user_first_name_cont, options_for_select(User.search_select_options) %>
@@ -46,6 +46,13 @@
    </p>
 
   <%= link_to "Reset Search Filters", listings_path %>
+
+  <br><br>
+  <div>
+    <h6>Growers By Location: </h6>
+    <div style="height: 300px; width: 250px" id="map"></div>
+    <%= javascript_pack_tag "leaflet/index" %>
+  </div>
 
     </div>
   </div>
