--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -8,7 +8,7 @@
 
 <h2>View Listing</h2>
 <div class="card" style="width: 30rem;">
-  <div class="row no-gutters">
+  <div class="row">
     <div class="col-md-12">   
      <div class="card-top">
 <div class="img-show">
@@ -22,36 +22,27 @@
   <strong>Description: </strong><%= @listing.description %>
   <p class="text"><strong>Suburb: </strong><%= @listing.user.location.suburb %><br>
   <strong>Grower: </strong><%= @listing.user.first_name %></p>
-  <%= link_to "Meet the Grower", user_path(@listing.user.id) %>
-  </div>
+  <%= button_to "Meet the Grower", user_path(@listing.user.id), :method => "get" %>
   </div>
   </div>
 
+  <div class="row">
+  <div class="col-md-12">   
 <div class="show-edit-delete">
-<br>
   <% if can? :edit, @listing %>
     <%= link_to "Edit", edit_listing_path(@listing.id) %>
     <%= link_to "Delete", listing_path(@listing.id), method: "delete" %>
     <% end %>
-
-<%# when add sold boolean need to add && @listing.sold == false %>
   <% if user_signed_in? && @listing.user.id != current_user.id %>
   <br>
-    <%= link_to "Add to Cart", carts_path(listing_id: @listing.id), method: :post %>
+    <%= link_to "🛒 Add to Cart", carts_path(listing_id: @listing.id), method: :post %>
   <% end %>
-
+  </div>
 </div>
-
+</div>
+</div>
+  </div>
+</div>
 <%= render "shared/back" %>
 
 </div>
-</div>
-</div>
-<!-- 
-<div>
-<h2>Location: </h2><br>
-<p><i>(Exact street address for pickup will be provided upon order confirmation)</i></p>
-
-<div style="height: 300px; width: 250px" id="map"></div>
-<%= javascript_pack_tag "leaflet/listingshow" %>
-</div> -->
