--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -16,26 +16,27 @@
 
 .subtitle {
   font-family: 'Handlee', cursive;
-  font-size: 40px;
-  // justify-content: center;
-  // vertical-align: middle;
+  font-size: 2.5em;
+  font-weight: bold;
   margin: 15px;
   margin-bottom: 150px;
+  background-color: rgba(248,249,250,0.6);
+  border-radius: 3px;
+  padding: 5px 80px 5px 80px;
 }
 
 .sign-up {
-  margin-top: 80px; 
+  margin: 80px 80px 0 80px; 
   font-size: 20px;
-  background-color: rgba(248,249,250,0.4);
-  border-radius: 5px;
+  background-color: rgba(248,249,250,0.5);
+  border-radius: 3px;
   padding: 5px 0 5px 0;
   font-family: 'Handlee', cursive;
-
 }
 
 .why-text {
   margin: 20px 20px 0 20px;
   font-family: 'Handlee', cursive;
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
 }
