Code comments and refactoring to tidy up - controllers

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,23 +34,23 @@
     <div class="row">
     <div class="col-md-4">
     <%= location_form.label :street_address %>
-    <%= location_form.text_field :street_address, class: "form-control"  %>
+    <%= location_form.text_field :street_address, class: "form-control", autocomplete: "street_address"  %>
     </div>
     <div class="col-md-4">
     <%= location_form.label :suburb %>
-    <%= location_form.text_field :suburb, class: "form-control"  %>
+    <%= location_form.text_field :suburb, class: "form-control", autocomplete: "suburb"  %>
     </div>
     <div class="col-md-4">
     <%= location_form.label :city %>
-    <%= location_form.text_field :city, class: "form-control"  %>
+    <%= location_form.text_field :city, class: "form-control", autocomplete: "city"  %>
     </div>
    <div class="col-md-4">
     <%= location_form.label :state %>
-    <%= location_form.text_field :state, class: "form-control"  %>
+    <%= location_form.text_field :state, class: "form-control", autocomplete: "state"  %>
     </div>
     <div class="col-md-4">
     <%= location_form.label :country %>
-    <%= location_form.text_field :country, class: "form-control"  %>
+    <%= location_form.text_field :country, class: "form-control", autocomplete: "country"  %>
   </div>
   </div>
   <br>
