--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,8 +27,8 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-
-  <%= f.fields_for :location, Location.new do |location_form| %>
+ 
+  <%= f.fields_for :location, resource.location do |location_form| %>
   <div class="form-group">
   <p><strong>Update Address:</strong></p>
     <div class="row">
